// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forward-with.scss - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
@forward 'foo.scss' with ($components: red);

=====================================output=====================================
@forward 'foo.scss' with (
  $components: red
);

================================================================================
`;

exports[`forward-with.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@forward 'foo.scss' with ($components: red);

=====================================output=====================================
@forward "foo.scss" with (
  $components: red
);

================================================================================
`;

exports[`quotes.scss - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
@use "library";

@use "library" with (
  $black: #222,
  $border-radius: 0.1rem
  $font-family: "Helvetica, sans-serif"
);

@use "library" as *;

@use "library" as f;

@use "sass:map";

@forward "library";

@forward "library" show border, $border-color;

@forward "library" hide gradient;

@forward "library" as btn-*;

@forward "library" as btn*;

=====================================output=====================================
@use 'library';

@use 'library' with (
  $black: #222,
  $border-radius: 0.1rem $font-family: 'Helvetica, sans-serif'
);

@use 'library' as *;

@use 'library' as f;

@use 'sass:map';

@forward 'library';

@forward 'library' show border, $border-color;

@forward 'library' hide gradient;

@forward 'library' as btn-*;

@forward 'library' as btn*;

================================================================================
`;

exports[`quotes.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@use "library";

@use "library" with (
  $black: #222,
  $border-radius: 0.1rem
  $font-family: "Helvetica, sans-serif"
);

@use "library" as *;

@use "library" as f;

@use "sass:map";

@forward "library";

@forward "library" show border, $border-color;

@forward "library" hide gradient;

@forward "library" as btn-*;

@forward "library" as btn*;

=====================================output=====================================
@use "library";

@use "library" with (
  $black: #222,
  $border-radius: 0.1rem $font-family: "Helvetica, sans-serif"
);

@use "library" as *;

@use "library" as f;

@use "sass:map";

@forward "library";

@forward "library" show border, $border-color;

@forward "library" hide gradient;

@forward "library" as btn-*;

@forward "library" as btn*;

================================================================================
`;
